objects/hed__Facility__c.object
<CustomObject>
    <description>A school property asset. For example, a classroom, lecture hall, or laboratory.</description>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organization that is responsible for the Facility.</description>
        <inlineHelpText>The organization that is responsible for the Facility.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Capacity__c</fullName>
        <description>The maximum number of occupants the Facility can hold.</description>
        <inlineHelpText>The maximum number of occupants the Facility can hold.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>A description of this Facility.</description>
        <inlineHelpText>A description of this Facility.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Facility_Type__c</fullName>
        <description>The type of Facility.</description>
        <inlineHelpText>The type of Facility.</inlineHelpText>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Cafeteria/Food Hall</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Computer Lab</fullName>
                </value>
                <value>
                    <fullName>Gymnasium</fullName>
                </value>
                <value>
                    <fullName>Health Center</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Lecture Hall</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Parent_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Facility is part of a larger one, specifies the parent Facility. For example, a building might be a parent of a classroom.</description>
        <inlineHelpText>If the Facility is part of a larger one, specifies the parent Facility. For example, a building might be a parent of a classroom.</inlineHelpText>
        <label>Parent Facility</label>
        <referenceTo>hed__Facility__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>